meilisearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meilisearch-ingress
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
    - host: crucible-search.geddes.rcac.purdue.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meilisearch
                port:
                  number: 80
  tls:
    - hosts:
        - crucible-search.geddes.purdue.edu
